Revision history for IPC::SRLock

0.9.212 2013-04-16
        - Switched to is from ok in tests. Added more tests

0.9.210 2013-04-15
        - Added Stauner cc06993e-a5e9-11e2-83b7-87183f85d660 to list of
          CPAN Testers who should pack up and go home
        - Updated inc::Bob to v1.12

0.9.208 2012-12-04
        - Added async set
        - Another attempt at finding the magic mswin32 path untaint regex

0.8.207 2012-11-27
        - Another attempt at finding the magic mswin32 path untaint regex

0.8.206 2012-11-22
        - Adjusted path untaint pattern for mswin32. Added a colon

0.8.205 2012-11-13
        - Readded _normalize_prereqs to inc/SubClass

0.8.203 2012-11-13
        - Updated inc::Bob to 1.7. Removed defined ors

0.8.201 2012-11-13
        - Modified M::B::_normalize_prereqs in inc::Bob. Now have a conditional
          dependency on IPC::ShareLite !!!!

0.8.200 2012-11-10
        - Changed get_table attribute name from flds to fields
        - Cache and reset the umask in Fcntl::_read_shm_file
        - Updated inc::Bob to 1.6

0.8.199 - 2012-09-07
        - Remove shared memory segment and semaphore set after tests
        - Added Bingos falco smoker to skip tests
          8625b420-f89e-11e1-8d3a-af090e115ead

0.8.197 - 2012-09-06
        - Added MSWin32 and Cygwin back into the stop tests lists

0.8.195 - 2012-09-05
        - Added POD spelling test
        - Updated inc::Bob to 1.5

0.8.194 - 2012-08-05
        - Updated inc::Bob to 1.4
        - Made Cache::Memcached a recommends not a requires. Refusing to do
          the same for IPC::ShareLite
        - Updated inc::Bob to 1.3

0.7.191 - 2012-04-08
        - Turning CPAN testing on again

0.7.190 - 2012-04-07
        - Giving Konig and dcollins a second chance
        - Stopped mirbsd and netbsd for not installing Moose / Class::MOP

0.7.188 - 2012-04-04
        - Stopped CPAN testing, no point in allowing it to continue
        - Updated inc::CPANTesting

0.7.185 - 2012-03-29