@@ -1,5 +1,7 @@
 Revision history for IPC::SRLock
 
+        - Readded _normalize_prereqs to inc::SubClass
+
 0.9.212 2013-04-16
         - Switched to is from ok in tests. Added more tests
 
